--- a/main.html
+++ b/main.html
@@ -8,9 +8,16 @@
 <body>
 
   <div class="wrapper">
-    <video class="flex" width="765" height="430" src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" controls></video>
-    <div class="speed">
-      <div class="speed-bar">1×</div>
+    <video class="flex" id="video" width="765" height="430" src="https://www.w3schools.com/html/mov_bbb.mp4" controls></video>
+    <div class="controls">
+      <button class="play" onclick="pauseVideo()">►</button>
+      <input type="range" id="volumeControl" name="volume" min="0" max="1" step="0.01" onchange="updateVolume()">
+      <input type="range" id="playbackRateControl" name="playbackRate" min="0.5" max="2" step="0.1" onchange="updatePlaybackRate()">
+      <button class="rewind" onclick="backward()">« 10s</button>
+      <button class="skip" onclick="forward()">25s »</button>
+    </div>
+    <div class="progress">
+      <div class="progress__filled"></div>
     </div>
   </div>
 
