--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 <body>
 
   <div class="wrapper">
-    <video class="flex" id="video" width="765" height="430" src="https://www.w3schools.com/html/mov_bbb.mp4" controls></video>
+    <video class="player__video" id="video" width="765" height="430" src="https://www.w3schools.com/html/mov_bbb.mp4" controls></video>
     <div class="controls">
-      <button class="play" onclick="pauseVideo()">►</button>
+      <button class="toggle" onclick="pauseVideo()">►</button>
       <input type="range" id="volumeControl" name="volume" min="0" max="1" step="0.01" onchange="updateVolume()">
       <input type="range" id="playbackRateControl" name="playbackRate" min="0.5" max="2" step="0.1" onchange="updatePlaybackRate()">
       <button class="rewind" onclick="backward()">« 10s</button>
